# BitConnect

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/lab1_pow_ipv8/: __init__.py  client.py  constants.py  libsodium_bootstrap.py  main.py  pow.py  protocol.py  validation.py
src/lab1_pow_ipv8.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_pow.py
